--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -7,3 +7,8 @@
 .md-search {
   display: none !important;
 }
+
+/* Increase spacing between main content and right-hand ToC */
+.md-content {
+  margin-right: 3rem;
+}
