--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,6 +1,6 @@
-/* Hide the top-left logo/icon button */
-.md-header__button.md-logo {
-  display: none !important;
+/* Header background */
+.md-header {
+  background-color: #222222 !important;
 }
 
 /* Hide the search UI (icon + bar) */
