--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,6 +1,6 @@
 /* Header background */
 .md-header {
-  background-color: #222222 !important;
+  background-color: #114b5f !important;
 }
 
 /* Hide the search UI (icon + bar) */
